User ajustes en el  Controller para logueo de usuarios

--- a/Ecomerce/Ecomerce/Web.config
+++ b/Ecomerce/Ecomerce/Web.config
@@ -19,6 +19,10 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="AdminUser" value="ing.royerhernandez@gmail.com" />
+    <add key="AdminPassWord" value="Israfel2112" />
+    <add key="SMTPName" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />  
   </appSettings>
   <system.web>
     <authentication mode="None"/>
