--- a/Ecomerce/Ecomerce/Ecomerce.csproj
+++ b/Ecomerce/Ecomerce/Ecomerce.csproj
@@ -209,6 +209,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Clases\CombosHelper.cs" />
     <Compile Include="Clases\FilesHelper.cs" />
+    <Compile Include="Clases\MailHelper.cs" />
+    <Compile Include="Clases\UsersHelper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CitiesController.cs" />
     <Compile Include="Controllers\CompaniesController.cs" />
