Add Api whit userController,add model userResponse and modify the models Company and Supplier

--- a/Ecomerce/Ecomerce/Ecomerce.csproj
+++ b/Ecomerce/Ecomerce/Ecomerce.csproj
@@ -220,22 +220,23 @@
     <Compile Include="Clases\MovementsHelper.cs" />
     <Compile Include="Clases\Response.cs" />
     <Compile Include="Clases\UsersHelper.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CategoriesController.cs" />
-    <Compile Include="Controllers\CitiesController.cs" />
-    <Compile Include="Controllers\CompaniesController.cs" />
-    <Compile Include="Controllers\CustomersController.cs" />
-    <Compile Include="Controllers\DeparmentsController.cs" />
-    <Compile Include="Controllers\GenericController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\OrdersController.cs" />
-    <Compile Include="Controllers\ProductsController.cs" />
-    <Compile Include="Controllers\StatesController.cs" />
-    <Compile Include="Controllers\SuppliersController.cs" />
-    <Compile Include="Controllers\TaxesController.cs" />
-    <Compile Include="Controllers\UsersController.cs" />
-    <Compile Include="Controllers\WareHousesController.cs" />
+    <Compile Include="Controllers\API\UsersController.cs" />
+    <Compile Include="Controllers\MVC\AccountController.cs" />
+    <Compile Include="Controllers\MVC\CategoriesController.cs" />
+    <Compile Include="Controllers\MVC\CitiesController.cs" />
+    <Compile Include="Controllers\MVC\CompaniesController.cs" />
+    <Compile Include="Controllers\MVC\CustomersController.cs" />
+    <Compile Include="Controllers\MVC\DeparmentsController.cs" />
+    <Compile Include="Controllers\MVC\GenericController.cs" />
+    <Compile Include="Controllers\MVC\HomeController.cs" />
+    <Compile Include="Controllers\MVC\ManageController.cs" />
+    <Compile Include="Controllers\MVC\OrdersController.cs" />
+    <Compile Include="Controllers\MVC\ProductsController.cs" />
+    <Compile Include="Controllers\MVC\StatesController.cs" />
+    <Compile Include="Controllers\MVC\SuppliersController.cs" />
+    <Compile Include="Controllers\MVC\TaxesController.cs" />
+    <Compile Include="Controllers\MVC\UsersController.cs" />
+    <Compile Include="Controllers\MVC\WareHousesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -262,6 +263,7 @@
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Models\Tax.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserResponse.cs" />
     <Compile Include="Models\WareHouse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -285,6 +287,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\RoyerPerfil.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\ecommerce.js" />
     <Content Include="Scripts\fileupload.js" />
